<resources>
    <string name="app_name">FirebaseNoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_icon_desc">User Icon</string>
    <string name="placeholder">Placeholder</string>
    <string name="email_insert">Enter Email</string>
    <string name="password_insert">Enter Password</string>
    <string name="password2_insert">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout_success">Logout successful!</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="success_message">%1$s successful!</string>
    <string name="empty_message">Details cannot be empty!</string>
    <string name="delete_icon_desc">Delete Icon</string>
    <string name="empty_icon_desc">Empty Icon</string>
    <string name="nothing_to_display">Nothing To Display…</string>
    <string name="add_button_desc">Add Button</string>
    <string name="username_insert">Enter Username</string>
    <string name="title_insert">Enter Title</string>
    <string name="content_insert">Enter Content</string>
</resources>