<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/m"
        tools:context=".ui.loginRegister.LoginRegisterFragment">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/xxl"
            android:text="@string/placeholder"
            android:textSize="@dimen/giant_text_size"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/m"
            android:src="@drawable/ic_profile"
            android:scaleType="fitCenter"
            android:contentDescription="@string/user_icon_desc"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:hint="@string/username_insert"
            android:background="@drawable/bg_edit_text"
            android:autofillHints="Username"
            android:inputType="text"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:hint="@string/email_insert"
            android:background="@drawable/bg_edit_text"
            android:autofillHints="Title"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:hint="@string/password_insert"
            android:background="@drawable/bg_edit_text"
            android:autofillHints="Desc"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:hint="@string/password2_insert"
            android:background="@drawable/bg_edit_text"
            android:autofillHints="Desc"
            android:inputType="textPassword"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:text="@string/login"
            app:cornerRadius="@dimen/xxxs"
            android:backgroundTint="@color/blue"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:text="@string/register"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/xxxs"
            app:backgroundTint="@color/white"/>

    </LinearLayout>
</layout>