<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/llAddEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/lightBlue"
        android:padding="@dimen/m"
        tools:context=".ui.addEdit.base.BaseAddEditNoteFragment">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/title_insert"
            android:autofillHints="Title"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:layout_marginTop="@dimen/m"
            android:hint="@string/content_insert"
            android:autofillHints="Desc"
            android:inputType="text"/>

        <RadioGroup
            android:id="@+id/rgColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/m"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbGreen"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/xxxxxl"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:clickable="true"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbBlue"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/xxxxxl"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/m"
                android:button="@android:color/transparent"
                android:clickable="true"/>

            <RadioButton
                android:id="@+id/rbRed"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/xxxxxl"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:clickable="true"/>

            <RadioButton
                android:id="@+id/rbPurple"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/xxxxxl"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/m"
                android:button="@android:color/transparent"
                android:clickable="true"/>

            <RadioButton
                android:id="@+id/rbYellow"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/xxxxxl"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:clickable="true"/>

        </RadioGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:text="@string/placeholder"
            app:cornerRadius="@dimen/xxxs"/>

    </LinearLayout>
</layout>